--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="img/Mysuru_festival_pink.png">
 
-    <title>Mysore</title>
+    <title>Mysuru</title>
 </head>
 
 <body>
@@ -49,7 +49,7 @@
 
         <div class="header-text-box">
             <h1 class="heading-primary">
-                <span class="heading-primary-main">Mysore</span>
+                <span class="heading-primary-main">Mysuru</span>
                 <span class="heading-primary-sub"></span>
             </h1>
             <a href="#section-tour" class="btn btn-white btn-animation">Know more about Mysuru</a>
@@ -66,7 +66,7 @@
             </div>
             <div class="row">
                 <div class="col-1">
-                    <h3 class="heading-text1 margin-bottom-small">Mysore Palace</h3>
+                    <h3 class="heading-text1 margin-bottom-small">Mysuru Palace</h3>
                     <p class="paragraph">
                         The Mysore Palace is a historical palace and the royal residence at Mysore in the Indian State
                         of Karnataka. It is the official residence of the Wadiyar dynasty and the seat of the Kingdom of
@@ -89,34 +89,15 @@
                     <a href="#" class="button-text">Learn more &rarr;</a>
 
                 </div>
+
                 <div class="col-1">
-                    <div class="composistion">
-
-                        <!-- display image calaction for viewport width -->
-                        <!-- <img srcset="/img/nat-1.jpg 300w, /img/nat-1-large.jpg 1000w" 
-                            src="/img/nat-1-large.jpg"
-                            alt="Photo1"
-                            sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 20vw, 300px" 
-                            class="composistion_photo composistion_photo-p1"> 
-
-                            <img srcset="/img/nat-2.jpg 300w, /img/nat-2-large.jpg 1000w"
-                                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 20vw, 300px"
-                                src="/img/nat-2-large.jpg"
-                                alt="Photo2"
-                                class="composistion_photo composistion_photo-p2">
-                            
-                            <img srcset="/img/nat-3.jpg 300w, /img/nat-3-large.jpg 1000w"
-                                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 20vw, 300px"
-                                src="/img/nat-3-large.jpg"
-                                alt="Photo3"
-                                class="composistion_photo composistion_photo-p3"> -->
-
-                        <img src="img/wallpaperflare.com_wallpaper.jpg" alt="Photo1"
-                            class="composistion_photo composistion_photo-p1">
+                    <div class="composition">
+                        <img src="img/Chamundeshwari_temple.jpg" alt="Photo1"
+                            class="composition__photo composition__photo--p1">
                         <img src="img/Brindavan Garden.jpg" alt="Photo2"
-                            class="composistion_photo composistion_photo-p2">
+                            class="composition__photo composition__photo--p2">
                         <img src="img/Chamundeshwari_temple.jpg" alt="Photo3"
-                            class="composistion_photo composistion_photo-p3">
+                            class="composition__photo composition__photo--p3">
                     </div>
                 </div>
             </div>
@@ -124,6 +105,11 @@
 
         <!-- Feature Section -->
         <section class="section-features">
+            <div class="center-text margin-bottom-big">
+                <h2 class="heading-sec">
+                    Places to visit
+                </h2>
+            </div>
             <div class="row">
 
                 <div class="col-2">
@@ -202,6 +188,9 @@
                     </div>
                 </div>
             </div>
+            <div class="center-text margin-top-big">
+                <a href="#" class="">.</a>
+            </div>
         </section>
 
         <!-- Tour Section -->
@@ -215,76 +204,6 @@
 
             <div class="row">
                 <!-- card 1 -->
-                <div class="col-3">
-                    <div class="card">
-                        <div class="card-side card-side-front">
-                            <div class="card-picture card-picture-1">
-                                &nbsp;
-                            </div>
-
-                            <h4 class="card-heading">
-                                <span class="card-heading-span card-heading-span-1">
-                                    Summer Season
-                                </span>
-                            </h4><br>
-
-                            <div class="card-details">
-                                <ul>
-                                    <li>Mysore Palace</li>
-                                    <li>GRS Fantasy Park</li>
-                                    <li>Karanji Lake</li>
-                                    <li>Mysore Zoo</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="card-side card-side-back card-side-back-1">
-                            <div class="card-cal">
-                                <div class="card-detail-box">
-                                    <p class="card-detail-only">Applicable for</p>
-                                    <p class="card-detail-value">All Age Groups</p>
-                                </div>
-                                <a href="#popup" class="btn btn-white">Tour Details!</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- card 2 -->
-                <div class="col-3">
-                    <div class="card">
-                        <div class="card-side card-side-front">
-
-                            <div class="card-picture card-picture-2">
-                                &nbsp;
-                            </div>
-
-                            <h4 class="card-heading">
-                                <span class="card-heading-span card-heading-span-2">
-                                    Spring Season
-                                </span>
-                            </h4><br>
-
-                            <div class="card-details">
-                                <ul>
-                                    <li>Chamundeshwari Temple</li>
-                                    <li>Talakadu</li>
-                                    <li>Chamundi Hills</li>
-                                    <li>KRS Dam</li>
-                                </ul>
-                            </div>
-
-                        </div>
-                        <div class="card-side card-side-back card-side-back-2">
-                            <div class="card-cal">
-                                <div class="card-detail-box">
-                                    <p class="card-detail-only">Applicable for</p>
-                                    <p class="card-detail-value">All Youngsters</p>
-                                </div>
-                                <a href="#popup" class="btn btn-white">Tour Details!</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- card 3 -->
                 <div class="col-3">
                     <div class="card">
                         <div class="card-side card-side-front">
@@ -310,14 +229,86 @@
                         <div class="card-side card-side-back card-side-back-3">
                             <div class="card-cal">
                                 <div class="card-detail-box">
-                                    <p class="card-detail-only">Applicable for</p>
-                                    <p class="card-detail-value">All Youngsters</p>
+                                    <p class="card-detail-only">Wintertime</p>
+                                    <p class="card-detail-value">Lowest Temp 7.7°C</p>
                                 </div>
-                                <a href="#popup" class="btn btn-white">Tour Details!</a>
+                                <a href="#popup" class="btn btn-white">Details!</a>
                             </div>
                         </div>
                     </div>
                 </div>
+
+                <!-- card 2 -->
+                <div class="col-3">
+                    <div class="card">
+                        <div class="card-side card-side-front">
+
+                            <div class="card-picture card-picture-2">
+                                &nbsp;
+                            </div>
+
+                            <h4 class="card-heading">
+                                <span class="card-heading-span card-heading-span-2">
+                                    Rainy Season
+                                </span>
+                            </h4><br>
+
+                            <div class="card-details">
+                                <ul>
+                                    <li>Chamundeshwari Temple</li>
+                                    <li>Talakadu</li>
+                                    <li>Chamundi Hills</li>
+                                    <li>KRS Dam</li>
+                                </ul>
+                            </div>
+
+                        </div>
+                        <div class="card-side card-side-back card-side-back-2">
+                            <div class="card-cal">
+                                <div class="card-detail-box">
+                                    <p class="card-detail-only">Rainy Days</p>
+                                    <p class="card-detail-value">Average annual rainfall is 798.6 mm</p>
+                                </div>
+                                <a href="#popup" class="btn btn-white">Details!</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- card 3 -->
+                <div class="col-3">
+                    <div class="card">
+                        <div class="card-side card-side-front">
+                            <div class="card-picture card-picture-1">
+                                &nbsp;
+                            </div>
+
+                            <h4 class="card-heading">
+                                <span class="card-heading-span card-heading-span-1">
+                                    Summer Season
+                                </span>
+                            </h4><br>
+
+                            <div class="card-details">
+                                <ul>
+                                    <li>Mysore Palace</li>
+                                    <li>GRS Fantasy Park</li>
+                                    <li>Karanji Lake</li>
+                                    <li>Mysore Zoo</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card-side card-side-back card-side-back-1">
+                            <div class="card-cal">
+                                <div class="card-detail-box">
+                                    <p class="card-detail-only">Hot Days</p>
+                                    <p class="card-detail-value">Highest Temp  39.4°C</p>
+                                </div>
+                                <a href="#popup" class="btn btn-white">Details!</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
             <div class="center-text margin-top-big">
@@ -328,7 +319,7 @@
         <!-- testimonial -->
         <section class="section-testimonial">
 
-            <div class="bak" >
+            <div class="bak" >x
                 <img src="../youngindiatourism-gh-pages/img/photo-1574312078847-e0f68bcc3175.jpg" alt="">
                 <div class="center-text margin-bottom-big">
                     <h2 class="heading-sec">
@@ -345,7 +336,7 @@
                             </figcaption>
                         </figure>
                         <div class="testimonial-text">
-                            <h3 class="heading-text1 margin-bottom-small bsdk "> Indian Heritage</h3>
+                            <h3 class="heading-text1 margin-bottom-small bsdk "> Wonderful Visit</h3>
                             <p class="paragraph">
                                 One Most beautiful place i visited ever. Yes , it is a crowded place. The architecture
                                 is
@@ -371,7 +362,7 @@
                             </figcaption>
                         </figure>
                         <div class="testimonial-text">
-                            <h3 class="heading-text1 margin-bottom-small">Amazing Experience</h3>
+                            <h3 class="heading-text1 margin-bottom-small">Wonderful Visit</h3>
                             <p class="paragraph">
                                 Most beautiful place. Too much crowded, go with family & friends.The architecture is
                                 wonderful.This is one of the historical places with great views and beautiful garden
@@ -394,7 +385,7 @@
                             </figcaption>
                         </figure>
                         <div class="testimonial-text">
-                            <h3 class="heading-text1 margin-bottom-small">Enjoyed a lot</h3>
+                            <h3 class="heading-text1 margin-bottom-small">Wonderful Visit</h3>
                             <p class="paragraph">
                                 Mysuru Palace is one of the Indias most visited palace. It is a beautiful place to
                                 visit.
@@ -430,7 +421,7 @@
 
 
                 <div class="center-text margin-top-big">
-                    <a href="#" class="button-text">Read more &rarr;</a>
+                    <a href="#" class="">.</a>
                 </div>
             </div>
         </section>
