--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         The work on laying out this garden was started in the year 1927 and completed in 1932.
                     </p>
 
-                    <a href="#" class="button-text">Learn more &rarr;</a>
+                    <a href="index2.html" class="button-text">Learn more &rarr;</a>
 
                 </div>
 
