--- a/index.html
+++ b/index.html
@@ -86,8 +86,6 @@
                         The work on laying out this garden was started in the year 1927 and completed in 1932.
                     </p>
 
-                    <a href="index2.html" class="button-text">Learn more &rarr;</a>
-
                 </div>
 
                 <div class="col-1">
@@ -242,42 +240,6 @@
                 <div class="col-3">
                     <div class="card">
                         <div class="card-side card-side-front">
-
-                            <div class="card-picture card-picture-2">
-                                &nbsp;
-                            </div>
-
-                            <h4 class="card-heading">
-                                <span class="card-heading-span card-heading-span-2">
-                                    Rainy Season
-                                </span>
-                            </h4><br>
-
-                            <div class="card-details">
-                                <ul>
-                                    <li>Chamundeshwari Temple</li>
-                                    <li>Talakadu</li>
-                                    <li>Chamundi Hills</li>
-                                    <li>KRS Dam</li>
-                                </ul>
-                            </div>
-
-                        </div>
-                        <div class="card-side card-side-back card-side-back-2">
-                            <div class="card-cal">
-                                <div class="card-detail-box">
-                                    <p class="card-detail-only">Rainy Days</p>
-                                    <p class="card-detail-value">Average annual rainfall is 798.6 mm</p>
-                                </div>
-                                <a href="#popup" class="btn btn-white">Details!</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- card 3 -->
-                <div class="col-3">
-                    <div class="card">
-                        <div class="card-side card-side-front">
                             <div class="card-picture card-picture-1">
                                 &nbsp;
                             </div>
@@ -309,10 +271,48 @@
                     </div>
                 </div>
 
+                <!-- card 3 -->
+                <div class="col-3">
+                    <div class="card">
+                        <div class="card-side card-side-front">
+
+                            <div class="card-picture card-picture-2">
+                                &nbsp;
+                            </div>
+
+                            <h4 class="card-heading">
+                                <span class="card-heading-span card-heading-span-2">
+                                    Rainy Season
+                                </span>
+                            </h4><br>
+
+                            <div class="card-details">
+                                <ul>
+                                    <li>Chamundeshwari Temple</li>
+                                    <li>Talakadu</li>
+                                    <li>Chamundi Hills</li>
+                                    <li>KRS Dam</li>
+                                </ul>
+                            </div>
+
+                        </div>
+                        <div class="card-side card-side-back card-side-back-2">
+                            <div class="card-cal">
+                                <div class="card-detail-box">
+                                    <p class="card-detail-only">Rainy Days</p>
+                                    <p class="card-detail-value">Average annual rainfall 798.6 mm</p>
+                                </div>
+                                <a href="#popup" class="btn btn-white">Details!</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+
             </div>
 
             <div class="center-text margin-top-big">
-                <a href="#" class="btn btn-purple">Discover all tours</a>
+                <a href="index2.html" class="btn btn-purple">Discover all tours</a>
             </div>
         </section>
 
