--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
 
         <div class="header-text-box">
             <h1 class="heading-primary">
-                <span class="heading-primary-main">Mysuru</span>
+                <span class="heading-primary-main"></span>
                 <span class="heading-primary-sub"></span>
+                <div class="center-text margin-top-big">
+                    <a href="index2.html" class="btn btn-purple">Discover all tours</a>
+                </div>
             </h1>
-            <a href="#section-tour" class="btn btn-white btn-animation">Know more about Mysuru</a>
         </div>
     </header>
 
