--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
         <nav class="navigation-nav">
             <ul class="navigation-list">
-                <li class="navigation-item"><a href="#" class="navigation-link"><span></span>About Young India
+                <li class="navigation-item"><a href="#" class="navigation-link"><span></span>About Mysore
                         Tourism</a></li>
-                <li class="navigation-item"><a href="#" class="navigation-link"><span></span>Benfits</a></li>
+                <li class="navigation-item"><a href="#" class="navigation-link"><span></span>Places to visit</a></li>
+                <li class="navigation-item"><a href="#" class="navigation-link"><span></span>Travel</a></li>
                 <li class="navigation-item"><a href="#" class="navigation-link"><span></span>Popular Tours</a></li>
                 <li class="navigation-item"><a href="#" class="navigation-link"><span></span>Testimonial</a></li>
-                <li class="navigation-item"><a href="#" class="navigation-link"><span></span>Booking &amp; Enquiry</a>
                 </li>
             </ul>
         </nav>
@@ -96,8 +96,7 @@
                             class="composition__photo composition__photo--p1">
                         <img src="img/Brindavan Garden.jpg" alt="Photo2"
                             class="composition__photo composition__photo--p2">
-                        <img src="img/Chamundeshwari_temple.jpg" alt="Photo3"
-                            class="composition__photo composition__photo--p3">
+                        <img src="img/palace.jpg" alt="Photo3" class="composition__photo composition__photo--p3">
                     </div>
                 </div>
             </div>
@@ -107,14 +106,15 @@
         <section class="section-features">
             <div class="center-text margin-bottom-big">
                 <h2 class="heading-sec">
-                    Places to visit
+                    Mysore Welcomes you
                 </h2>
             </div>
             <div class="row">
 
                 <div class="col-2">
                     <div class="feature-box">
-                        <i class="feature-box-icon icon-basic-world"></i>
+                        <i class="feature-box-icon"><img class="pho" src="/Places to visit/img/transportation.png"
+                                alt=""></i>
                         <h3 class="heading-text1">Transport</h3><br>
                         <p class="route">
                             By Plane: Mysore Airport (MYQ IATA) (located 10 km south of the city centre). Mysore has its
@@ -131,7 +131,7 @@
 
                 <div class="col-2">
                     <div class="feature-box">
-                        <i class="feature-box-icon icon-basic-compass"></i>
+                        <i class="feature-box-icon"><img class="pho" src="Places to visit/img/teamwork.png" alt=""></i>
                         <h3 class="heading-text1">Culture of Mysore</h3><br>
                         <p class="route">
                             Mysore City is known as the cultural capital of Karnataka. Mysore was the capital of the
@@ -152,7 +152,7 @@
 
                 <div class="col-2">
                     <div class="feature-box">
-                        <i class="feature-box-icon icon-basic-map"></i>
+                        <i class="feature-box-icon"><img class="pho" src="Places to visit/img/yoga-pose.png" alt=""></i>
                         <h3 class="heading-text1">Yoga</h3><br>
                         <p class="route">
                             The peak ‘Yoga season" in Mysore runs from December to February, with some students arriving
@@ -173,7 +173,7 @@
 
                 <div class="col-2">
                     <div class="feature-box">
-                        <i class="feature-box-icon icon-basic-heart"></i>
+                        <i class="feature-box-icon"><img class="pho" src="Places to visit/img/bus.png" alt=""></i>
                         <h3 class="heading-text1">How To travel</h3><br>
                         <p class="route">
                             By hitch-hiking: Taking a lift, most of the locals (mainly 2 wheelers) are very helpful and
@@ -265,7 +265,7 @@
                             <div class="card-cal">
                                 <div class="card-detail-box">
                                     <p class="card-detail-only">Hot Days</p>
-                                    <p class="card-detail-value">Highest Temp  39.4°C</p>
+                                    <p class="card-detail-value">Highest Temp 39.4°C</p>
                                 </div>
                                 <a href="#popup" class="btn btn-white">Details!</a>
                             </div>
@@ -309,7 +309,7 @@
                         </div>
                     </div>
                 </div>
-                
+
 
             </div>
 
@@ -321,7 +321,7 @@
         <!-- testimonial -->
         <section class="section-testimonial">
 
-            <div class="bak" >x
+            <div class="bak">x
                 <img src="../youngindiatourism-gh-pages/img/photo-1574312078847-e0f68bcc3175.jpg" alt="">
                 <div class="center-text margin-bottom-big">
                     <h2 class="heading-sec">
@@ -345,10 +345,7 @@
                                 wonderful and maintained well.The historical places with great views and beautiful
                                 garden
                                 outside and tiger statue.
-                                one government Store is also their, do buy whatever you want. You really get sandal
-                                items in
-                                cheap price as compare to other store in city.
-                                Note that washroom facility also available, so no worry.
+                                one government Store is also their, do buy whatever you want.
 
                             </p>
                         </div>
@@ -369,10 +366,7 @@
                                 Most beautiful place. Too much crowded, go with family & friends.The architecture is
                                 wonderful.This is one of the historical places with great views and beautiful garden
                                 outside
-                                and inside washroom facilities available for all. Most attraction place in Mysore. You
-                                really get sandal items in
-                                cheap price as compare to other store in city.
-                                Note that washroom facility also available, so no worry.
+                                and inside washroom facilities available for all. Most attraction place in Mysore.
                             </p>
                         </div>
                     </div>
@@ -393,8 +387,7 @@
                                 visit.
                                 The best time to visit the palace is during Dussehra festival. The Palace sparkles in
                                 the
-                                darkness with a thousands of bulbs which makes it more beautiful. Best day to visit the
-                                palace is Sunday during evening time
+                                darkness with a thousands of bulbs which makes it more beautiful. 
                             </p>
                         </div>
                     </div>
@@ -413,9 +406,7 @@
                             <p class="paragraph">
                                 The palace is epitome of beauty. Heritage well maintained. It gave feel of time travel.
                                 Entry fee is 70 rupees for Indian nationlity. There is arrangement for keeping shoes at
-                                minimal cost. At 7 PM entire palace was illuminated. You should not miss this. The best
-                                part
-                                is you can sit down on the grass in front of palace and enjoy the view.
+                                minimal cost. At 7 PM entire palace was illuminated. You should not miss this.
                             </p>
                         </div>
                     </div>
@@ -429,7 +420,7 @@
         </section>
 
         <!-- booking Seation -->
-       <!--<section class="section-booking">
+        <section class="section-booking">
             <div class="row">
                 <div class="book">
                     <div class="book-form">
@@ -437,43 +428,26 @@
 
                             <div class="center-text margin-bottom-small">
                                 <h2 class="heading-sec">
-                                    Start Booking Now!
+                                    Risk of corona !!
                                 </h2>
                             </div>
-
-                            <div class="form1-group">
-                                <input type="text" class="form1-input" placeholder="Full Name" id="name" required>
-                                <label for="name" class="form1-label">Full Name</label>
-                            </div>
-
-                            <div class="form1-group">
-                                <input type="email" class="form1-input" placeholder="Email address" id="email" required>
-                                <label for="name" class="form1-label">Email address</label>
-                            </div>
-
-                            <div class="form1-group">
-
-                                <div class="form1-radio-group">
-                                    <input type="radio" id="small" name="gang-size">
-                                    <label for="small" class="form1-radio-label">Small Tour Gang</label>
-                                </div>
-
-                                <div class="form1-radio-group">
-                                    <input type="radio" id="small" name="gang-size">
-                                    <label for="small" class="form1-radio-label">Big Tour Gang</label>
-                                </div>
-
-                            </div>
-
-                            <div class="form1-group">
-                                <button class="btn btn-purple">Next Step &rarr;</button>
-                            </div>
+                            <ul>
+                                <li>Air travel requires spending time in security lines and airport terminals, which can
+                                    bring you in close contact with
+                                    other people and frequently touched surfaces.</li>
+                                <li>Traveling on buses and trains for any length of time can involve being in crowded
+                                    terminals and sitting or standing
+                                    within 6 feet of others, which may increase your risk of getting COVID-19.</li>
+                                <li>Making stops along the way for gas, food, or bathroom breaks can put you and your
+                                    traveling companions in close contact
+                                    with other people and frequently touched surfaces.</li>
+                            </ul>
                         </form>
                     </div>
                 </div>
             </div>
         </section>
-    </main>-->
+    </main>
 
     <footer class="footer">
         <div class="footer-logo-box">
