--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Places to visit/style.css">
     <link rel="stylesheet" href="main.scss">
+    <link rel="shortcut icon" type="image/png" href="img/Mysuru_festival_pink.png">
     <title>Mysuru</title>
 </head>
 
