--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                         <div class="card-side card-side-back card-side-back-3">
                             <div class="card-cal">
                                 <div class="card-detail-box">
-                                    <p class="card-detail-only">Wintertime</p>
+                                    <p class="card-detail-only">Cold Days</p>
                                     <p class="card-detail-value">Lowest Temp 7.7°C</p>
                                 </div>
                                 <a href="#popup" class="btn btn-white">Details!</a>
@@ -296,7 +296,7 @@
 
             </div>
 
-            <div class="center-text margin-top-big">
+            <div class="center-text margin-top-big1">
                 <a href="index2.html" class="btn btn-purple">Discover all tours</a>
             </div>
         </section>
@@ -468,7 +468,7 @@
             </div>
             <div class="popup3-right">
                 <a href="#section-tour" class="popup3-close">&times;</a>
-                <h2 class="heading-sec .margin-bottom-small">In Rainy</h2>
+                <h2 class="heading-sec .margin-bottom-small">In Monsoon</h2>
                 <p class="popup3-text">
                     <strong>PROS</strong> <br> 1. Very comfortable stay. <br> 2. Spring Seasons are best for travelling.
                     <br> 3. Options available for purchasing food items. <br> <strong>CONS</strong><br> 1. Photography is not allowed.<br> 2. Very crowded during holidays.
