--- a/index2.html
+++ b/index2.html
@@ -201,7 +201,7 @@
                         <div class="card1">
                             <img class="photos" src=" Places to visit/img/hills.jpg" alt="">
                             <h3>Chamundi Hill</h3>
-                            <p>he Chamundi Hills are located 13 km east of Mysore, the Palace City, in Karnataka, India. The average elevation is 1,000 metres (3,300 ft). <br><br>The Chamundeshwari Temple is located atop the Chamundi Hills.
+                            <p>The Chamundi Hills are located 13 km east of Mysore, the Palace City, in Karnataka, India. The average elevation is 1,000 metres (3,300 ft). <br><br>The Chamundeshwari Temple is located atop the Chamundi Hills.The Chamundeshwari Temple is located atop the Chamundi Hills.
                             </p>
                         </div>
                     </div>
