--- a/index2.html
+++ b/index2.html
@@ -201,7 +201,8 @@
                         <div class="card1">
                             <img class="photos" src=" Places to visit/img/hills.jpg" alt="">
                             <h3>Chamundi Hill</h3>
-                            <p>The Chamundi Hills are located 13 km east of Mysore, the Palace City, in Karnataka, India. The average elevation is 1,000 metres (3,300 ft). <br><br>The Chamundeshwari Temple is located atop the Chamundi Hills.The Chamundeshwari Temple is located atop the Chamundi Hills.
+                            <p>The Chamundi Hills are located 13 km east of Mysore, the Palace City, in Karnataka, India. The average elevation is 1,000 metres (3,300 ft). <br><br>The Chamundeshwari Temple is located atop the Chamundi Hills.The Chamundeshwari
+                                Temple is located atop the Chamundi Hills.
                             </p>
                         </div>
                     </div>
@@ -209,7 +210,7 @@
                         <div class="column">
                             <div class="card1">
                                 <div class="sarak">
-                                    <img class="photos" src=" Places to visit/img/RailMuseum.jpg" alt="">
+                                    <img class="photos" src="Places to visit/img/Railmuseum.jpg" alt="">
                                     <h3>Railway Museum</h3>
                                     <p>The museum is opposite the Central Food Technology and Research Institute on Krishnaraja Sagar Road. <br><br> It has locomotives and a gallery of photographs and paintings depicting the growth of railways in India.
                                     </p>
