--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-
+    <!--
     <div class="navigation">
         <input type="checkbox" class="navigation-checkbox" id="navi-toggle">
         <label for="navi-toggle" class="navigation-button">
@@ -49,7 +49,7 @@
         </nav>
 
     </div>
-
+    -->
     <header class="header" id="header">
         <div class="header-logo-box">
             <a href="index.html"><img src="img/Mysuru_festival_pink.png" alt="Logo" class="header-logo"></a>
@@ -417,7 +417,7 @@
 
     <footer class="footer">
         <div class="footer-logo-box">
-            <img src="img/Mysuru_festival_pink.png" alt="Logo" class="footer-logo">
+            <img src="img/footer.png" alt="Logo" class="footer-logo">
             <hr class="footer-liine">
             <div class="footer-line">
                 Bulid and Copyright &copy; by Swapnil & Jatin 2020.
