--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="main.scss">
     <link rel="shortcut icon" type="image/png" href="img/Mysuru_festival_pink.png">
     <title>Mysuru</title>
+    <script>
+        (function(w, d) {
+            w.CollectId = "5fd3cae6278c444f79e696e6";
+            var h = d.head || d.getElementsByTagName("head")[0];
+            var s = d.createElement("script");
+            s.setAttribute("type", "text/javascript");
+            s.async = true;
+            s.setAttribute("src", "https://collectcdn.com/launcher.js");
+            h.appendChild(s);
+        })(window, document);
+    </script>
 </head>
 
 <body>
@@ -252,7 +263,7 @@
 
         <footer class="footer">
             <div class="footer-logo-box">
-                <img src="img/Mysuru_festival_pink.png" alt="Logo" class="footer-logo">
+                <img src="img/footer.png" alt="Logo" class="footer-logo">
                 <hr class="footer-liine">
                 <div class="footer-line">
                     Bulid and Copyright &copy; by Swapnil & Jatin 2020.
